--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --bg-color: #0e2c58;
-    --primary-color: #DDDDDD;
+    --primary-color: #f30b0b;
     --secondary-color: #f510f5;
     --font: "Nunito Sans", sans-serif;
 }
