--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 :root {
-    --bg-color: #0e2c58;
+    --bg-color: #0b000e;
     --primary-color: #d8ebe3;
     --secondary-color: #f510f5;
     --font: "Nunito Sans", sans-serif;
