--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --bg-color: #0b000e;
-    --primary-color: #d8ebe3;
+    --primary-color: #eef7f3;
     --secondary-color: #f510f5;
     --font: "Nunito Sans", sans-serif;
 }
