--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ nav a:hover {
     font-size: 1.3rem;
     text-align: center;
     padding: 2rem;
-    border: var(--secondary-color) solid 2px;
+    border: var(color rgba(247, 0, 0, 0.966)) solid 2px;
 }
 
 span {
